--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="owl.theme.default.min.css">
 
     <!-- MAIN STYLE -->
-    <link rel="stylesheet" href="css/tooplate-style.css">
+    <link rel="stylesheet" href="tooplate-style.css">
     
 <!--
 
